Added grid for multispecies

--- a/simulation_notebook.ipynb
+++ b/simulation_notebook.ipynb
@@ -111,29 +111,33 @@
     "# --- 1. CONFIGURATION ---\n",
     "H, W = 100, 100\n",
     "MAX_AGENTS = 150000  # High limit for safety\n",
-    "N_STEPS = 200\n",
+    "N_STEPS = 3000\n",
     "\n",
     "\n",
     "# Define your niche for Spp0\n",
-    "# Species 0: High N demand (0.8), Low K demand (0.05)\n",
     "spp0_niche = {\n",
-    "    \"center\": [0.4, 0.50, 0.1, 0.05, 0.05],\n",
+    "    \"center\": [0.4, 0.45, 0.1, 0.3, 0.08],\n",
     "    \"left\":   [0.2, 0.20, 0.1, 0.03, 0.03],\n",
     "    \"right\":  [0.1, 0.20, 0.1, 0.03, 0.03]\n",
     "}\n",
     "\n",
-    "# Spp 1 wants K=0.50\n",
     "spp1_niche = {\n",
-    "    \"center\": [0.4, 0.05, 0.1, 0.50, 0.05],\n",
+    "    \"center\": [0.4, 0.25, 0.1, 0.45, 0.08],\n",
     "    \"left\":   [0.2, 0.03, 0.1, 0.20, 0.03],\n",
     "    \"right\":  [0.1, 0.03, 0.1, 0.20, 0.03]\n",
     "}\n",
     "\n",
+    "\n",
+    "spp2_niche = {\n",
+    "    \"center\": [0.4, 0.25, 0.1, 0.4, 0.08],\n",
+    "    \"left\":   [0.2, 0.03, 0.1, 0.20, 0.03],\n",
+    "    \"right\":  [0.1, 0.03, 0.1, 0.20, 0.03]\n",
+    "}\n",
     "soil_base_ratio = [0.35, 0.1, 0.35, 0.1] # [N, P, K, O]\n",
     "\n",
-    "NICHE_CENTERS = np.array([spp0_niche[\"center\"],spp1_niche[\"center\"] ], dtype=np.float32)\n",
-    "NICHE_LEFT    = np.array([spp0_niche[\"left\"], spp1_niche[\"left\"]], dtype=np.float32)\n",
-    "NICHE_RIGHT   = np.array([spp0_niche[\"right\"], spp1_niche[\"right\"]], dtype=np.float32)\n",
+    "NICHE_CENTERS = np.array([spp0_niche[\"center\"],spp1_niche[\"center\"], spp2_niche[\"center\"] ], dtype=np.float32)\n",
+    "NICHE_LEFT    = np.array([spp0_niche[\"left\"], spp1_niche[\"left\"], spp2_niche[\"left\"]], dtype=np.float32)\n",
+    "NICHE_RIGHT   = np.array([spp0_niche[\"right\"], spp1_niche[\"right\"], spp2_niche[\"right\"]], dtype=np.float32)\n",
     "\n",
     "growth_rate = 0.15\n",
     "respiration_rate = 0.01\n",
@@ -160,6 +164,7 @@
     "\n",
     "model.add_initial_seeds(count=300, species_id=0)\n",
     "model.add_initial_seeds(count=300, species_id=1)\n",
+    "model.add_initial_seeds(count=300, species_id=2)\n",
     "\n",
     "fig, axes = plt.subplots(2, 2, figsize=(12, 10))\n",
     "\n",
@@ -186,13 +191,13 @@
     "history_elements = []\n",
     "history_biomass_grid = []\n",
     "\n",
-    "N_SPP = 2 # Number of species\n",
+    "N_SPP = 3 # Number of species\n",
     "history_spp_biomass = [[] for _ in range(N_SPP)]\n",
     "history_spp_count = [[] for _ in range(N_SPP)]\n",
     "\n",
     "print(\"Starting Simulation...\")\n",
     "for t in range(N_STEPS):\n",
-    "    n_agents = model.step()\n",
+    "    n_agents = model.step(\"cosine\")\n",
     "\n",
     "    if t % 10 == 0:\n",
     "        # A. Record TOTAL stats (what you already have)\n",
