Added grid for multispecies

--- a/simulation_notebook.ipynb
+++ b/simulation_notebook.ipynb
@@ -128,16 +128,16 @@
     "}\n",
     "\n",
     "\n",
-    "spp2_niche = {\n",
+    "spp3_niche = {\n",
     "    \"center\": [0.4, 0.25, 0.1, 0.4, 0.08],\n",
     "    \"left\":   [0.2, 0.03, 0.1, 0.20, 0.03],\n",
     "    \"right\":  [0.1, 0.03, 0.1, 0.20, 0.03]\n",
     "}\n",
     "soil_base_ratio = [0.35, 0.1, 0.35, 0.1] # [N, P, K, O]\n",
     "\n",
-    "NICHE_CENTERS = np.array([spp0_niche[\"center\"],spp1_niche[\"center\"], spp2_niche[\"center\"] ], dtype=np.float32)\n",
-    "NICHE_LEFT    = np.array([spp0_niche[\"left\"], spp1_niche[\"left\"], spp2_niche[\"left\"]], dtype=np.float32)\n",
-    "NICHE_RIGHT   = np.array([spp0_niche[\"right\"], spp1_niche[\"right\"], spp2_niche[\"right\"]], dtype=np.float32)\n",
+    "NICHE_CENTERS = np.array([spp0_niche[\"center\"],spp1_niche[\"center\"], spp3_niche[\"center\"] ], dtype=np.float32)\n",
+    "NICHE_LEFT    = np.array([spp0_niche[\"left\"], spp1_niche[\"left\"], spp3_niche[\"left\"]], dtype=np.float32)\n",
+    "NICHE_RIGHT   = np.array([spp0_niche[\"right\"], spp1_niche[\"right\"], spp3_niche[\"right\"]], dtype=np.float32)\n",
     "\n",
     "growth_rate = 0.15\n",
     "respiration_rate = 0.01\n",
@@ -190,9 +190,9 @@
     "history_biomass = []\n",
     "history_elements = []\n",
     "history_biomass_grid = []\n",
-    "\n",
     "N_SPP = 3 # Number of species\n",
     "history_spp_biomass = [[] for _ in range(N_SPP)]\n",
+    "history_spp_biomass_grid = [[] for _ in range(N_SPP)]\n",
     "history_spp_count = [[] for _ in range(N_SPP)]\n",
     "\n",
     "print(\"Starting Simulation...\")\n",
@@ -212,7 +212,8 @@
     "        for s_id in range(N_SPP):\n",
     "            spp_grid = model.get_species_biomass(s_id)\n",
     "            history_spp_biomass[s_id].append(np.mean(spp_grid))\n",
-    "\n",
+    "            if t % 100 == 0:\n",
+    "                history_spp_biomass_grid[s_id].append(np.mean(spp_grid))\n",
     "        if t % 50 == 0:\n",
     "            history_biomass_grid.append(grid_mass_total)\n",
     "\n",
